fix explain section collapsing

--- a/src/views/explainsection/explainsection.css
+++ b/src/views/explainsection/explainsection.css
@@ -4,6 +4,7 @@
 }
 #explain-section.collapsed > #explain {
 	height: 0;
+	padding: 0;
 }
 
 #explain-section-close-button,
